<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/StateView_Style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:text="@string/stateview_lat"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="lat"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_long"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="lon"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_depth"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="depth"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_roll"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="roll"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_pitch"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="pitch"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_yaw"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="yaw"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_speed"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="speed"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_rpm"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="rpm"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow android:paddingTop="10dp" >

        <TextView
            android:text="@string/stateview_op_mode"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="op_mode"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_error_count"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:gravity="right"
            android:tag="error_count"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/stateview_last_error"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>

        <TextView
            android:maxLength="20"
            android:tag="last_error"
            android:textSize="@dimen/stateView_textSize1" >
        </TextView>
    </TableRow>

</TableLayout>