<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:tag="listOn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:tag="buttonUp"
            android:text="@string/config_up" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="buttonDown"
            android:text="@string/config_down" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="buttonAdd"
            android:text="@string/config_add" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="buttonRemovedragitem.xml"
            android:text="@string/config_remove" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:tag="listOff" />

</LinearLayout>