<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="4dp" >

    <TextView
        android:id="@+id/lblLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coord_dialog_lat"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/valLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:minWidth="30dp"
        android:text="@string/coord_dialog_edit_text"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coord_dialog_long"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/valLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:minWidth="30dp"
        android:text="@string/coord_dialog_edit_text"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coord_dialog_ok" />

</LinearLayout>