<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <pt.lsts.accu.components.controlpad.PadButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        action="Accelerate"
        android:tag="btn2"
        android:text="@string/control_accelerate" />

    <pt.lsts.accu.components.controlpad.PadButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        action="Decelerate"
        android:tag="btn3"
        android:text="@string/control_decelerate" />

    <pt.lsts.accu.components.controlpad.PadButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        action="Stop"
        android:tag="btn3"
        android:text="@string/control_stop" />

    <pt.lsts.accu.components.controlpad.TeleOpToggle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="btn1" />

</LinearLayout>