<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="4dp" >

    <TextView
        android:id="@+id/beacon_dialog_lblLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beacon_dialog_lat"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/beacon_dialog_valLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/beacon_dialog_lblLat"
        android:layout_toRightOf="@id/beacon_dialog_lblLat"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/beacon_dialog_lblCurrentGpsLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/beacon_dialog_valLat"
        android:layout_toRightOf="@id/beacon_dialog_valLat"
        android:paddingLeft="4dp"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/beacon_dialog_lblLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/beacon_dialog_lblLat"
        android:text="@string/beacon_dialog_lon"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/beacon_dialog_valLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/beacon_dialog_lblLon"
        android:layout_toRightOf="@id/beacon_dialog_lblLon"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/beacon_dialog_lblCurrentGpsLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/beacon_dialog_valLon"
        android:layout_toRightOf="@id/beacon_dialog_valLon"
        android:paddingLeft="4dp"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <pt.lsts.accu.components.Finder
        android:id="@+id/beacon_dialog_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/beacon_dialog_lblCurrentGpsLat"
        android:layout_toRightOf="@id/beacon_dialog_lblCurrentGpsLat"
        android:paddingLeft="5dp"
        android:scaleType="center" />

    <TextView
        android:id="@+id/beacon_dialog_lblDist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/beacon_dialog_find"
        android:layout_below="@id/beacon_dialog_find"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/beacon_dialog_lblDepth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/beacon_dialog_lblLon"
        android:text="@string/beacon_dialog_depth"
        android:textColor="@color/beaconDialogTextColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/beacon_dialog_valDepth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/beacon_dialog_lblDepth"
        android:inputType="numberDecimal"
        android:minWidth="20dp"
        android:tag="depth" />

    <Button
        android:id="@+id/beacon_dialog_btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/beacon_dialog_find"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/beacon_dialog_btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/beacon_dialog_btnOk"
        android:layout_toRightOf="@id/beacon_dialog_btnOk"
        android:text="@string/beacon_dialog_change_gps_coords" />

</RelativeLayout>